--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 			<textarea id="textarea" class="form-control" spellcheck="false" style="width: 100%; resize: none; height: 100px;"></textarea>
 		</div>
 		<div id="button_wrapper">
-			<div onсlick="" id="check" class="btn-text-default">Check</div>
-			<div onсlick="" id="replace" class="btn-text-default">Insert to document</div>
+			<div onсlick="" id="check" class="noselect btn-text-default">Check</div>
+			<div onсlick="" id="replace" class="noselect btn-text-default">Insert to document</div>
 		</div>
 		<div id="scrollable-container-id" style="position: relative; width: 100%; height: 70%; overflow: hidden ">
 			<div id="result" style="width: calc(100% - 24px); margin: 0px 12px 0px 12px; word-break: break-word; display: flex; flex-flow: column;"></div>
