Change input text area to div text area

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 			</div>
 			<select id="language_id" style="width: 100%;" class="select_example"></select>
 		</div>
-		<div style="margin: 0px 12px 0px 12px;">
-			<textarea id="textarea" class="form-control" spellcheck="false" style="width: 100%; resize: none; height: 100px;"></textarea>
+		<div id="enter_container" class="form-control" style="position: relative; margin: 16px 12px 0px 12px; min-height: 100px; max-height: 100%; height: fit-content;">
+			<div id="textarea" contenteditable="true" style="min-width: 100%; min-height: 100px; width: fit-content; height: fit-content; padding: 0px 15px 15px 3px; outline: none; white-space: pre; float: left;" ></div>
 		</div>
 		<div id="button_wrapper">
 			<div onсlick="" id="check" class="noselect btn-text-default">Check</div>
