--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 			</div>
 			<select id="language_id" style="width: 100%;" class="select_example"></select>
 		</div>
-		<div id="enter_container" class="form-control" style="position: relative; margin: 16px 12px 0px 12px; min-height: 100px; max-height: 45%; height: fit-content;">
-			<div id="textarea" contenteditable="true" style="min-width: 95%; max-width: 95%; min-height: 95%; height: fit-content; padding: 0px 15px 5px 3px; outline: none; white-space: normal; float: left; word-wrap: break-word;" ></div>
+		<div id="enter_container" class="form-control" style="cursor: text; position: relative; margin: 16px 12px 0px 12px; min-height: 100px; max-height: 45%; height: fit-content;">
+			<div id="textarea" contenteditable="true" style="min-width: 95%; max-width: 95%; height: fit-content; padding: 0px 15px 5px 3px; outline: none; white-space: normal; float: left; word-wrap: break-word;" ></div>
 		</div>
 		<div id="button_wrapper">
 			<div onсlick="" id="check" class="noselect btn-text-default">Check</div>
