--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 			<div id="textarea" contenteditable="true" style="min-width: 95%; max-width: 95%; height: fit-content; padding: 0px 15px 5px 3px; outline: none; white-space: normal; float: left; word-wrap: break-word;" ></div>
 		</div>
 		<div id="button_wrapper">
-			<div onсlick="" id="check" class="noselect btn-text-default i18n">Check</div>
-			<div onсlick="" id="replace" class="noselect btn-text-default i18n">Insert to document</div>
+			<div onсlick="" id="check" style="padding: 2px;" class="noselect btn-text-default i18n">Check</div>
+			<div onсlick="" id="replace" style="padding: 2px;" class="noselect btn-text-default i18n">Insert to document</div>
 		</div>
 		<div id="scrollable-container-id" style="position: relative; width: 100%; height: 70%; overflow: hidden ">
 			<div id="result" style="width: calc(100% - 24px); margin: 0px 12px 0px 12px; word-break: break-word; display: flex; flex-flow: column;"></div>
