Added formula skip The plugin no longer cuts spaces

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 		  <label id="clear" class="unselectable" style="float: right; border-bottom: var(--scaled-one-pixel, 1px) dotted rgba(255, 255, 255, 0.8); cursor: pointer;">Clear</label>
 		</div>
 		<div id="enter_container" class="form-control" style="cursor: text; position: relative; margin: 0px 12px 0px 12px; min-height: 100px; max-height: 45%; height: fit-content;">
-			<div id="textarea" contenteditable="true" data-text="Select the text to check in the document or enter it manually" style="min-width: 95%; max-width: 95%; height: fit-content; padding: 0px 15px 5px 3px; outline: none; white-space: normal; float: left; word-wrap: break-word;" ></div>
+			<div id="textarea" contenteditable="true" data-text="Select the text to check in the document or enter it manually" style="white-space: pre-wrap !important; min-width: 95%; max-width: 95%; height: fit-content; padding: 0px 15px 5px 3px; outline: none; white-space: normal; float: left; word-wrap: break-word;" ></div>
 		</div>
 		<div id="button_wrapper">
 			<div onсlick="" id="check" class="noselect btn-text-default i18n" style="height: auto; min-height: 20px;">Check</div>
