Added translations. Fixed duplicate languages.

--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
     	</div>
 		<div id="div_language" style="margin: 0px 12px 0px 12px;">
 			<div style="margin: 16px 0 4px 0; font-weight: normal !important;">
-				<label style="">Language</label>
+				<label class="i18n">Language</label>
 			</div>
 			<select id="language_id" style="width: 100%;" class="select_example"></select>
 		</div>
 		<div id="hide_show" style="margin: 12px 14px 4px 0px;">
-		  <label id="clear" class="unselectable" style="float: right; border-bottom: var(--scaled-one-pixel, 1px) dotted rgba(255, 255, 255, 0.8); cursor: pointer;">Clear</label>
+		  <label id="clear" class="unselectable i18n" style="float: right; border-bottom: var(--scaled-one-pixel, 1px) dotted rgba(255, 255, 255, 0.8); cursor: pointer;">Clear</label>
 		</div>
 		<div id="enter_container" class="form-control" style="cursor: text; position: relative; margin: 0px 12px 0px 12px; min-height: 100px; max-height: 45%; height: fit-content;">
 			<div id="textarea" contenteditable="true" data-text="Select the text to check in the document or enter it manually" style="white-space: pre-wrap !important; min-width: 95%; max-width: 95%; height: fit-content; padding: 0px 15px 5px 3px; outline: none; white-space: normal; float: left; word-wrap: break-word;" ></div>
